tests/snapshots/parser_snapshot__expr.snap
---
source: tests/parser_snapshot.rs
expression: parsed
---
(
    Program {
        segments: [
            Segment {
                name: "data",
                items: [
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "msg",
                            ),
                            size: Byte,
                            values: [
                                String(
                                    [
                                        104,
                                        105,
                                        36,
                                    ],
                                ),
                            ],
                        },
                        Span {
                            line: 3,
                            col: 5,
                            len: 3,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "nums",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    BinOp {
                                        op: Add,
                                        lhs: Int(
                                            1,
                                        ),
                                        rhs: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                        },
                        Span {
                            line: 4,
                            col: 5,
                            len: 4,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "expr",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    BinOp {
                                        op: Mul,
                                        lhs: BinOp {
                                            op: Add,
                                            lhs: Int(
                                                3,
                                            ),
                                            rhs: Int(
                                                4,
                                            ),
                                        },
                                        rhs: Int(
                                            5,
                                        ),
                                    },
                                ),
                            ],
                        },
                        Span {
                            line: 5,
                            col: 5,
                            len: 4,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "sub_exp",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    BinOp {
                                        op: Sub,
                                        lhs: Int(
                                            100,
                                        ),
                                        rhs: BinOp {
                                            op: Div,
                                            lhs: Int(
                                                50,
                                            ),
                                            rhs: Int(
                                                2,
                                            ),
                                        },
                                    },
                                ),
                            ],
                        },
                        Span {
                            line: 6,
                            col: 5,
                            len: 7,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "mod_exp",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    BinOp {
                                        op: Mod,
                                        lhs: Int(
                                            17,
                                        ),
                                        rhs: Int(
                                            5,
                                        ),
                                    },
                                ),
                            ],
                        },
                        Span {
                            line: 7,
                            col: 5,
                            len: 7,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "sym_off",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    Offset(
                                        Ident(
                                            "msg",
                                        ),
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 8,
                            col: 5,
                            len: 7,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "sym_off_plus",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    BinOp {
                                        op: Add,
                                        lhs: Offset(
                                            Ident(
                                                "msg",
                                            ),
                                        ),
                                        rhs: Int(
                                            3,
                                        ),
                                    },
                                ),
                            ],
                        },
                        Span {
                            line: 9,
                            col: 5,
                            len: 12,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "seg_of",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    Seg(
                                        Ident(
                                            "msg",
                                        ),
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 10,
                            col: 5,
                            len: 6,
                        },
                    ),
                    DataDecl(
                        DataDecl {
                            name: Some(
                                "neg_imm",
                            ),
                            size: Word,
                            values: [
                                Expr(
                                    Neg(
                                        Int(
                                            7,
                                        ),
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 11,
                            col: 5,
                            len: 7,
                        },
                    ),
                ],
                span: Span {
                    line: 2,
                    col: 1,
                    len: 4,
                },
            },
            Segment {
                name: "code",
                items: [
                    Instruction(
                        Instruction {
                            mnemonic: "mov",
                            operands: [
                                Reg(
                                    "ax",
                                ),
                                Imm(
                                    Offset(
                                        Ident(
                                            "msg",
                                        ),
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 15,
                            col: 5,
                            len: 3,
                        },
                    ),
                    Instruction(
                        Instruction {
                            mnemonic: "mov",
                            operands: [
                                Reg(
                                    "bx",
                                ),
                                Imm(
                                    BinOp {
                                        op: Add,
                                        lhs: Offset(
                                            Ident(
                                                "msg",
                                            ),
                                        ),
                                        rhs: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                        },
                        Span {
                            line: 16,
                            col: 5,
                            len: 3,
                        },
                    ),
                    Instruction(
                        Instruction {
                            mnemonic: "mov",
                            operands: [
                                Reg(
                                    "cx",
                                ),
                                Imm(
                                    BinOp {
                                        op: Mul,
                                        lhs: BinOp {
                                            op: Add,
                                            lhs: Int(
                                                1,
                                            ),
                                            rhs: Int(
                                                2,
                                            ),
                                        },
                                        rhs: Int(
                                            3,
                                        ),
                                    },
                                ),
                            ],
                        },
                        Span {
                            line: 17,
                            col: 5,
                            len: 3,
                        },
                    ),
                    Instruction(
                        Instruction {
                            mnemonic: "mov",
                            operands: [
                                Reg(
                                    "dx",
                                ),
                                Imm(
                                    Int(
                                        256,
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 18,
                            col: 5,
                            len: 3,
                        },
                    ),
                ],
                span: Span {
                    line: 14,
                    col: 1,
                    len: 4,
                },
            },
        ],
        entry: None,
    },
    [],
)
